apps/mlflow/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mlflow
  namespace: apps
  labels:
    app.kubernetes.io/name: mlflow
    app.kubernetes.io/part-of: ai-lab
    app.kubernetes.io/managed-by: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`mlflow.aymenmastouri.io`)
      kind: Rule
      services:
        - name: mlflow
          port: 5000
  tls:
    secretName: mlflow-tls
